--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>HouseSalad</title>
+    <title>Giphy Search</title>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" title="reset" />
-    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
-    <nav class="navbar">
-      <%= link_to "HouseSalad", root_path %>
+    <nav class="navbar navbar-default" role="navigation">
+      <div class="navbar-header">
+        <%= link_to "Giphy Search", root_path, class: "navbar-brand" %>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <%= form_tag :search, method: :get, class: "form-inline" do %>
+            <div class="form-group search-field">
+              <%= text_field_tag(:q) %>
+              <%= submit_tag "Search", class: "btn btn-primary" %>
+            </div>
+          <% end %>
+        </ul>
+      </div>
     </nav>
 
     <%= yield %>
-
-    <%= javascript_include_tag 'application' %>
   </body>
 </html>
